# trionchain-protocol

./: LICENSE  README.md
contracts/: Cargo.toml  lib.rs
docs/: TrionChain_Technical_Brief.md  TrionChain_Whitepaper_v2.1.md  architecture.md  consensus.md  fem-computation.md  node-roles.md  rwa-layer.md  trion-objects.md
docs/architecture/: ISO20022-Interoperability.md  architecture.md
docs/consensus/: consensus.md
docs/fem-computation/: fem-computation.md
docs/specifications/: node-roles.md  rwa-layer.md  trion-objects.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
oracle/: sim_crossborder_energy_trioncells.py  sim_crossborder_market_trn_fee.py  sim_market_battery_distributed.py  sim_two_country_frontier_trade.py  trion_aviation_oracle.py  trion_oracle.py  trion_oracle_mesh.py  trion_oracle_v2.py  trion_real_aviation.py  trionchain_battery_spill_20x20.py  trionchain_lmp_20x20_battery_unmet.py  trionchain_lmp_20x20_old.py  trionchain_simulator_v0_8_line_limits_congestion_pricing.py
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
simulations/: sim_phyfi_parametric_resilience.py  slide_07_dual_layer_architecture.py  trionchain_lmp_20x20.py  trionchain_simulator_v0_3_mesh.py  trionchain_simulator_v0_4_fem_shock.py  trionchain_simulator_v0_5_1_internal_market_high_injection.py  trionchain_simulator_v0_5_internal_market.py  trionchain_simulator_v0_6_internal_market_2hop.py  trionchain_simulator_v0_7_dynamic_pricing_2hop.py
